# app/Http/Controllers/DepositController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 
 use App\Services\DepositService;
+use Illuminate\Support\Facades\Auth;
 
 class DepositController extends Controller
 {
@@ -58,29 +59,21 @@ class DepositController extends Controller
     /**
      * 이용자의 아이디로 트랜잭션을 조회후 PDF 로 랜더링합니다.
      *
-     * @param int $id
      * @return mixed
      * @throws \GuzzleHttp\Exception\GuzzleException
      *
      * @SWG\Get(
-     *     path="/users/{user_id}/deposits",
+     *     path="/users/deposits/pdf",
      *     description="이용자의 아이디로 트랜잭션을 조회후 PDF 로 랜더링합니다.",
      *     produces={"application/json"},
      *     tags={"Deposit"},
-     *      @SWG\Parameter(
-     *         name="user_id",
-     *         in="path",
-     *         description="User Id",
-     *         required=true,
-     *         type="integer"
-     *      ),
      *      @SWG\Response(
      *         response=201,
      *         description="Successful User Deposit PDF Render"
      *     ),
      * )
      */
-    public function pdfRenderFromDepositList(int $id) {
-        return $this->ds->renderPDF($id);
+    public function pdfRenderFromDepositList() {
+        return $this->ds->renderPDF();
     }
 }
